--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,33 +1,27 @@
 pipeline
 {
-
-agent {
-  label 'DevServer'
-}
-
-tools {
-  maven 'mymaven'
-}
-
-stages{
+  agent any 
+  stages{
 
     stage('build')
     {
-        steps {
-            sh 'mvn clean package'
-        }
-
-        post {
-        success {
-            archiveArtifacts artifacts: '**/target/*.war'
-                 }
-            }
-
+      steps {
+        echo "this is build stage"
+      }
     }
 
-   
-
+    stage('test')
+    {
+      steps {
+        echo "this is test stage"
+      }
+    }
     
-}
-
+    stage('deploy')
+    {
+      steps {
+        echo "this is deploy stage "
+      }
+    }
+  }
 }
