--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,27 +1,22 @@
 pipeline
 {
-  agent any 
+  agent {
+    label 'linux'
+  } 
   stages{
 
     stage('build')
     {
       steps {
-        echo "this is build stage"
+        sh 'mvn clean package'
+      }
+
+      post{
+        success {
+          archiveArtifacts artifacts: '**/target/*.war'
+        }
       }
     }
 
-    stage('test')
-    {
-      steps {
-        echo "this is test stage"
-      }
-    }
-    
-    stage('deploy')
-    {
-      steps {
-        echo "this is deploy stage "
-      }
-    }
   }
 }
